--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body{
     justify-content: center;
     align-items: center;
 }
-.wraper {
+.wrapper {
     width: 100%;
     height: 165px;
     position: relative;
@@ -70,10 +70,62 @@ body{
     top: 85px;
 }
 .face.left{
-    right: 50%;
-    margin-right: 116px;
+    margin-left: 10px;
 }
 .face.right{
+    right: 0;
+    margin-right: 10px;
+}
+.upper_lip{
+    height: 25px;
+    width: 80px;
+    border: 4px solid black;
+    border-top: none;
+    position: absolute;
+    top: 50px;
+    background-color: #fbe54a;
+}
+.upper_lip.left{
+    border-bottom-left-radius: 40px 25px;    
+    border-right: none;
+    transform: rotate(-20deg);
+    right: 50%;
+    
+}
+.upper_lip.right{
+    border-bottom-right-radius: 40px 25px;
+    border-left: none;
+    transform: rotate(20deg);
+    left: 50%;    
+}
+.lower_lip_wrapper{
+    bottom: 0;
+    position: absolute;
     left: 50%;
-    margin-left: 116px;
+    margin-left: -150px;
+    z-index: -1;
+    height: 110px;
+    width: 300px;
+    overflow: hidden;
+}
+.lower_lip{
+    width: 300px;
+    height: 3500px;
+    background-color: #990513;
+    border-radius: 200px/2000px;
+    border: 2px solid black;
+    position: absolute;
+    bottom: 0;
+    overflow: hidden;
+}
+.lower_lip::after{
+    content: '';
+    position: absolute;
+    bottom: -20px;
+    width: 100px;
+    height: 100px;
+    background-color: #fc4a62;
+    left: 50%;
+    margin-left: -50px;
+    border-radius: 100px/100px;
 }
