--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
     flex: 1;
     height: 50%;
     background-color: #2e2e2e;
+    color: greenyellow;
     font-size: 16px;
 }
 
@@ -27,32 +28,29 @@ body {
     height: 50%;
 }
 
-#code {
+#code{
     overflow: hidden;
     height: 100%;
 }
 
-.actions {
+.actions{
     position: absolute;
-    top: 0;
+    top:0;
     right: 0;
     display: flex;
     flex-direction: column;
 }
-
-.actions>button {
+.actions>button{
     margin: 10px;
     background: #ddd;
     padding: 8px 10px;
     border: none;
     border-radius: 10%;
 }
-
-.actions>button.active {
+.actions>button.active{
     box-shadow: 1px 1px 1px rgba(80, 36, 36, 0.8);
     border-radius: 30%;
 }
-
-.actions>button:focus {
+.actions>button:focus{
     outline: none;
 }
